// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules|Card With text 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <cdx-card
      class="card card--padding"
      ng-reflect-text="Lorem Ipsum Dollar  "
      ng-reflect-title="Abes Bagels Gluten Free 270g 3"
      ng-reflect-url="#someurl"
    >
       I am a card 
    </cdx-card>
  </ng-component>
</storybook-dynamic-app-root>
`;

exports[`Storyshots Molecules|Card Without text 1`] = `
<storybook-dynamic-app-root
  cfr={[Function CodegenComponentFactoryResolver]}
  data={[Function Object]}
  target={[Function ViewContainerRef_]}
>
  <ng-component>
    <cdx-card
      class="card card--padding"
      ng-reflect-title="Abes Bagels Gluten Free 270g 3"
      ng-reflect-url="#someurl"
    >
      <img
        image=""
        src="https://shop.countdown.co.nz/Content/ProductImages/zoom/9421001850783.jpg/Abes-Bagels-Everything-Bagel-360g.jpg"
      />
    </cdx-card>
  </ng-component>
</storybook-dynamic-app-root>
`;
